--- a/interests.html
+++ b/interests.html
@@ -219,12 +219,12 @@
                 </ul>
             </div>
         </div>
-
     </footer>
+    <script src="assets/js/maps.js"></script>
     <script
         src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2eR_lVLTcE0iTGzqHjdH-qEed49XWpNw&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
 </body>
 
